--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
 			<version>5.1.38</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>el-impl</artifactId>
+			<version>2.2</version>
+		</dependency>
+		
 	</dependencies>
 
 	<repositories>
