--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,13 @@
 			<artifactId>el-impl</artifactId>
 			<version>2.2</version>
 		</dependency>
-		
+
+		<dependency>
+		    <groupId>org.postgresql</groupId>
+		    <artifactId>postgresql</artifactId>
+		    <version>9.4.1207</version>
+		</dependency>
+
 	</dependencies>
 
 	<repositories>
