--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,7 @@
 						<configuration>
 							<target>
 								<echo file="Procfile"
-									message="web: java $JAVA_OPTS -javaagent:target/lucee-inst.jar -jar target/winstone.jar --ajp13Port=-1 --httpPort=$PORT --directoryListings=false --simulateModUniqueId=true --webroot=webroot " />
+									message="web: java $JAVA_OPTS -javaagent:target/lucee-inst.jar -jar target/winstone.jar --ajp13Port=-1 --httpPort=$PORT --directoryListings=false --simulateModUniqueId=true --webroot=application/webroot " />
 							</target>
 						</configuration>
 						<goals>
