--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
 				<configuration>
 					<filesets>
 						<fileset>
-							<directory>application/webroot/WEB-INF</directory>
+							<directory>app/webroot/WEB-INF</directory>
 							<includes>
 								<include>**/*</include>
 							</includes>
@@ -109,7 +109,7 @@
 							<goal>copy-dependencies</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>application/webroot/WEB-INF/lib</outputDirectory>
+							<outputDirectory>app/webroot/WEB-INF/lib</outputDirectory>
 						</configuration>
 					</execution>
 
@@ -154,7 +154,7 @@
 						<configuration>
 							<target>
 								<echo file="Procfile"
-									message="web: java $JAVA_OPTS -javaagent:target/lucee-inst.jar -jar target/winstone.jar --ajp13Port=-1 --httpPort=$PORT --directoryListings=false --simulateModUniqueId=true --webroot=application/webroot " />
+									message="web: java $JAVA_OPTS -javaagent:target/lucee-inst.jar -jar target/winstone.jar --ajp13Port=-1 --httpPort=$PORT --directoryListings=false --simulateModUniqueId=true --webroot=app/webroot " />
 							</target>
 						</configuration>
 						<goals>
